Update copy for uncomment html. Fix iframe view covering up button in narrow width. Make iframe fixed so it's viewable as code editor expands and people scroll down. closes #596, closes #655

--- a/public/css/main.less
+++ b/public/css/main.less
@@ -1087,6 +1087,11 @@ hr {
   color: @gray-light;
 }
 
+.iframe-scroll {
+  position: fixed !important;
+  margin-top: 75px;
+}
+
 //uncomment this to see the dimensions of all elements outlined in red
 //* {
 //  border-color: red;
